# bassinet-server

./: .env  Cargo.toml  README.md
conf/: default.toml
src/: ffmpeg.rs  gen_509.rs  main.rs  ssi.rs  test_qr.rs  test_rabbitmq.rs  test_rocksdb.rs  test_sui.rs  utils.rs
src/application/command_service/: account_application_service.rs  chunk_list_application_service.rs  collection_application_service.rs  file_application_service.rs  mod.rs  sui_application_service.rs
src/application/query_service/: account_query_service.rs  chunk_list_query_service.rs  collection_query_service.rs  media_query_service.rs  mod.rs  my_collection_query_service.rs
src/domain/: mod.rs
src/domain/command/: collection_command.rs  file_command.rs  mod.rs
src/domain/model/entity/: account.rs  bassinet_coin.rs  bassinet_nft.rs  chunk_list.rs  collection.rs  collection_item.rs  file_entity.rs  mod.rs  prelude.rs
src/domain/repository/: account_repository.rs  bassinet_coin_repository.rs  bassinet_nft_repository.rs  chunk_list_repository.rs  collection_repository.rs  file_repository.rs  identity_repository.rs  media_repository.rs  mod.rs
src/infrastructure/: database_connection.rs  database_service.rs  image_util.rs  ipfs.rs  jwt.rs  mod.rs  redis_async_pool.rs  redis_connection.rs
src/infrastructure/messaging/: account_bound_consumer.rs  coin_published_consumer.rs  mod.rs  nft_published_consumer.rs
src/infrastructure/sui/: mod.rs  nft_query.rs
src/interface/rest/: account.rs  account_api.rs  file_api.rs  logon_api.rs  media_api.rs  mod.rs  my_collection_api.rs  public_collection_api.rs  validate.rs  wallet.rs
src/interface/rest/dto/: account.rs  collection.rs  file_entity.rs  logon.rs  media.rs  mod.rs
