[package]
name = "bassinet-server"
version = "0.1.0"
edition = "2024"

#[[bin]]
#name = "ffmpeg"
#path = "src/ffmpeg.rs"

[[bin]]
name = "ssi"
path = "src/ssi.rs"

[[bin]]
name= "testqr"
path = "src/test_qr.rs"

#[[bin]]
#name = "x509"
#path = "src/gen_509.rs"

[[bin]]
name = "rabbitmq"
path = "src/test_rabbitmq.rs"

[dependencies]
sea-orm = { version = "1.1.12", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "debug-print"] }

qrcode = "0.14.1"
image = "0.25.6"

axum = {version = "0.8.3", features = ["ws", "multipart"]}
axum-extra = {version = "0.10.1", features = ["typed-header"]}
# axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-server = { version = "0.7"}
# rcgen = "0.13.2"
jsonwebtoken = "9.3"
once_cell = "1.8"
tower-http = {version = "0.6.2", features = ["cors", "fs", "trace", "auth"]}
tower = "0.5.2"
tower-service = "0.3.3"
http-body-util = "0.1.3"
pin-project = "1.1.10"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

anyhow = "^1.0.60"
snafu = "0.8"
clap = { version = "4.5.37", features = ["derive"] }

dirs = "6.0.0"

tokio = { version = "1.41.0", features = ["full"] }
tokio-util = {version = "0.7.12", features = ["full"] }
tokio-stream = {version = "0.1.16"}
futures = { version = "0.3.0", features = ["thread-pool"]}

bytes = "1.0.0"
chrono = "0.4.38"
config = "0.15.11"

 ipld-core = "0.4.2"
 ipfs-api-backend-hyper = { version = "0.6", features = ["with-hyper-rustls"]}
 ssi = "0.10.2"

# ffmpeg-next = "7.1.0"

sui_sdk = { git = "https://github.com/mystenlabs/sui",  package = "sui-sdk"}

# diesel = { version = "2.2.9", features = ["postgres"] }
dotenvy = "0.15"

rand = "0.7.3"
redis = { version = "0.30.0", features = ["tokio-comp"] }
deadpool = {version = "0.12.2", features = ["rt_tokio_1"]}

ed25519-dalek = "2.1.1"
sha2 = "0.10.9"
hex = "0.4.3"

tokio-test = {version="0.4.4"}
# rustls = { version = "0.23.26", features = ["ring"] }
# rustls-acme = "0.13.0"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
tokio-rustls-acme = {version = "0.7.1", features = ["axum"]}
thiserror = "2.0.12"
amqprs = {version="2.1.1", features = ["traces", "tracing"]}
async-trait = "0.1.64"
sanitize-filename = "=0.1.0"

[dependencies.rocksdb]
version = "0.23.0"
default-features = false
features = ["bindgen-runtime", "snappy", "lz4", "zstd", "zlib", "bzip2"]
# features = ["lz4"]

[dependencies.uuid]
version = "1.16.0"
features = [
"v4", # Lets you generate random UUIDs
"fast-rng", # Use a faster (but still sufficiently random) RNG
"macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
